# src/common/lib/auth/api/model/index.ts
@@ -2,5 +2,7 @@ export * from './credential-provider';
 export * from './error-response';
 export * from './login-request';
 export * from './login-result';
+export * from './me-response';
+export * from './refresh-token-request';
 export * from './sign-up-request';
 export * from './token-response';
