# src/common/lib/auth/api/model/me-response.ts
@@ -1,0 +1,45 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Platform.Auth
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface MeResponse
+ */
+export interface MeResponse {
+  /**
+   *
+   * @type {string}
+   * @memberof MeResponse
+   */
+  userId: string;
+  /**
+   *
+   * @type {string}
+   * @memberof MeResponse
+   */
+  name: string;
+  /**
+   *
+   * @type {string}
+   * @memberof MeResponse
+   */
+  email: string;
+  /**
+   *
+   * @type {string}
+   * @memberof MeResponse
+   */
+  profilePictureImageUrl?: string | null;
+}
