# src/common/lib/auth/openapi.yaml
@@ -102,6 +102,82 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /auth/refresh:
+    post:
+      tags:
+        - Auth
+      summary: 리프레시 로직을 실행합니다.
+      operationId: RefreshAsync
+      requestBody:
+        description: 리프레시 요청
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshTokenRequest'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/RefreshTokenRequest'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/RefreshTokenRequest'
+      responses:
+        '200':
+          description: 리프레시에 성공했을 때 반환합니다.
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/TokenResponse'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenResponse'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/TokenResponse'
+        '401':
+          description: '엑세스 토큰이 잘못되었거나, 리프레시 로직에 실패했을 때'
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /auth/me:
+    get:
+      tags:
+        - Auth
+      summary: 현재 로그인된 사용자의 정보를 가져옵니다.
+      operationId: MeAsync
+      responses:
+        '200':
+          description: 정보를 성공적으로 가져온 경우
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/MeResponse'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MeResponse'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/MeResponse'
+        '401':
+          description: 로그인이 되어있지 않은 경우
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      security:
+        - JwtAuthenticationFilter: []
 components:
   schemas:
     CredentialProvider:
@@ -140,6 +216,41 @@ components:
         - NeedsRegistration
         - LoginSucceed
       type: string
+    MeResponse:
+      required:
+        - email
+        - name
+        - userId
+      type: object
+      properties:
+        userId:
+          minLength: 1
+          type: string
+        name:
+          minLength: 1
+          type: string
+        email:
+          minLength: 1
+          type: string
+        profilePictureImageUrl:
+          type: string
+          nullable: true
+      additionalProperties: false
+    RefreshTokenRequest:
+      required:
+        - accessToken
+        - refreshToken
+      type: object
+      properties:
+        accessToken:
+          minLength: 1
+          type: string
+          description: 만료된 엑세스 토큰
+        refreshToken:
+          minLength: 1
+          type: string
+          description: 리프레시 토큰
+      additionalProperties: false
     SignUpRequest:
       type: object
       properties:
